adding the site
maybe I shouldnt do this through the github app

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
+
 <html>
+<!-- 
+TODO 
+
+Add keywords when you find out what the project is about lol
+move style to external style sheet
+ -->
 <head>
-<title>Page Title</title>
+	<title>APUSH Project</title>
+	<meta name="author" content="Mr Wimmer's S2 APUSH classes" />
+	<meta name="keywords" content="APUSH" />
+	
+	<!-- External CSS File -->
+	<link rel="stylesheet" href="style.css" type="text/css" />
+	
+	<!-- External Javascript File -->
+	<script type="text/javascript" src="main.js">
+	</script>
+	
+	<style type="text/css">
+		
+	</style>
+	
 </head>
+
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+	<br />
+	<div id="headDiv">
+		
+	</div>
+	<div id="gallery">
+	
+	</div>
+	<div id="mainDiv">
+		<u>To Do:</u><br /><br />
+		<li>Add navigation bar</li> <br />
+		<li>Fix this background looping (unless no-one notices)</li> <br />
+		<li>Add backup fonts</li>
+	</div>
+	<br />
 </body>
+
 </html>
