Added navigation bar

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 TODO 
 
 Add keywords when you find out what the project is about lol
-move style to external style sheet
+
+metadata keywords to be added later, near project release (dont want people finding it now!!!):
+yorktowne, CYHS, APUSH, Central York High School, The Yorktowne Hotel, project, 2017
  -->
 <head>
 	<title>APUSH Project</title>
 	<meta name="author" content="Mr Wimmer's S2 APUSH classes" />
-	<meta name="keywords" content="APUSH" />
+	<meta name="keywords" content="" />
 	
 	<!-- External CSS File -->
 	<link rel="stylesheet" href="style.css" type="text/css" />
@@ -29,6 +31,17 @@ move style to external style sheet
 	<br />
 	<div id="headDiv">
 		
+	</div>
+	<div id="navDiv">
+		<table id="navBar">
+			<tr>
+				<td id="test"><a href="index.html">Home</a></td>
+				<td><a href="">Notable Events</a></td>
+				<td><a href="">GH0STS?!?!!?</a></td>
+				<td><a href="">something else idk</a></td>
+				<td><a href="">Interviews</a></td>
+			</tr>
+		</table>
 	</div>
 	<div id="gallery">
 	
