--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@ yorktowne, CYHS, APUSH, Central York High School, The Yorktowne Hotel, project, 
 	<div id="navDiv">
 		<table id="navBar">
 			<tr>
+				<!-- Please Note... This may look bvery derpy as of now. I just need to fix if first -Bryce -->
 				<td id="test"><a href="index.html">Home</a></td>
 				<td><a href="">Notable Events</a></td>
+					<div id="NEDropDown"></div>
 				<td><a href="">GH0STS?!?!!?</a></td>
+					<div id="GDropDown"></div>
 				<td><a href="">something else idk</a></td>
+					<div id="SEDropDown"></div>
 				<td><a href="">Interviews</a></td>
+					<div id="IDropDown"></div>
 			</tr>
 		</table>
 	</div>
