--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ yorktowne, CYHS, APUSH, Central York High School, The Yorktowne Hotel, project, 
 				<!-- Please Note... This may look bvery derpy as of now. I just need to fix if first -Bryce -->
 				<td id="test"><a href="index.html">Home</a></td>
 				<td><a href="">Notable Events</a></td>
-					<div id="NEDropDown"></div>
+					<div id="NEDropDown" class="dropDown"></div>
 				<td><a href="">GH0STS?!?!!?</a></td>
-					<div id="GDropDown"></div>
+					<div id="GDropDown" class="dropDown"></div>
 				<td><a href="">something else idk</a></td>
-					<div id="SEDropDown"></div>
+					<div id="SEDropDown" class="dropDown"></div>
 				<td><a href="">Interviews</a></td>
-					<div id="IDropDown"></div>
+					<div id="IDropDown" class="dropDown"></div>
 			</tr>
 		</table>
 	</div>
